[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Enemy" type="KinematicBody2D" index="0"]

scale = Vector2( 0.75, 0.75 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
moveSpeed = 50

[node name="Sprite" type="Sprite" parent="." index="0"]

modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="surfaceRayLeft" type="RayCast2D" parent="." index="2"]

position = Vector2( -36, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 64 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="surfaceRayRight" type="RayCast2D" parent="." index="3"]

position = Vector2( 36, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 64 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="playerRayLeft" type="RayCast2D" parent="." index="4"]

position = Vector2( -32, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( -32, 0 )
collision_mask = 1

[node name="playerRayRight" type="RayCast2D" parent="." index="5"]

position = Vector2( 32, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 32, 0 )
collision_mask = 1

[node name="AttackTimer" type="Timer" parent="." index="6"]

process_mode = 0
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]


